src/App.css
.App {
  
  min-height: 100vh;
  width: 100vw; /* use 100vw instead of 99vw */
  background-color: #ffe4c4;
  overflow-x: hidden;
  text-align: center;
}


.element{
  margin-top: 2vh;
  margin-bottom: 2vh;
  border-width: 0;
  border-bottom-width: 1.5px;
  outline: none;
  background-color: #fdf4e9;
}

.box {
  text-align: center;
  
}
.label {
  justify-self: center;
}

.error{
  color:#8f1919;
}




.title-font {
  margin-top: 10vh;
  font-family: "Alfa Slab One", serif;
  font-weight: 400;
  font-style: normal;
  font-size: 5vh;
}



.general-font {
  font-family: "Outfit", sans-serif;
  font-optical-sizing: auto;
  font-weight: 450;
  font-style: normal;
}

.response{
  transition: margin 0.5s ease-in-out, opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
  opacity: 0;
  visibility:visible;
  margin-top: 0vh;
  margin-bottom: 0vh;
  height: 0px;
  }

.wrong{
  box-shadow: inset 10px 10px 10px 10px red;
}

.response.visible{
    opacity: 1;
    margin-top: 2vh;
    margin-bottom: 2vh;
}

.button {
  border-width: 0;
  box-shadow: 0px 9px 0px 1px rgb(193, 34, 34), 0px 10px 0px 5px rgb(0, 0, 0);
  width: 125px;
  border-radius: 35%;
  height: 75px;
  background-color: rgb(255, 75, 75);
  border-color: rgb(255, 255, 255);

}

.answer{
  margin-bottom: 2%;
}

.button:hover{
transition-duration: .25s;
cursor: pointer;

}



.button-waiting{
  background-color: rgb(255, 147, 147);
  box-shadow: 0px 9px 0px 1px rgb(165, 104, 104), 0px 10px 0px 5px rgb(0, 0, 0);
  pointer-events: none;
}

.button:active{
  transition-duration: .25s;
  cursor: pointer;
  border-width: 0;
  box-shadow: 0px 0px 0px 1px rgb(196, 33, 33), 0px 1px 0px 5px rgb(0, 0, 0);
    margin-top: 9px; 
    margin-bottom: -9px;
  }

.text{
  cursor: default;
}

